--- a/pokemon/index.html
+++ b/pokemon/index.html
@@ -26,7 +26,7 @@
 	<section id="elegido1">
 		<article>
 			<h3 id="nombrePokemon1">Nombre Pokemon</h3>
-			<!-- <p id="imagenPokemon1">Imagen</p> -->
+			<p id="imagenPokemon1">Imagen</p>
 			<p id="datosPokemon1">Datos Pokemon</p>
 			<p id="batalla1">Batalla</p>
 			<input type="hidden" id="ataque1">
@@ -35,7 +35,7 @@
 	<section id="elegido2">
 		<article>
 			<h3 id="nombrePokemon2">Nombre Pokemon</h3>
-			<!-- <p id="imagenPokemon2">Imagen</p> -->
+			<p id="imagenPokemon2">Imagen</p>
 			<p id="datosPokemon2">Datos Pokemon</p>
 			<p id="batalla2">Ballata</p>
 			<input type="hidden" id="ataque2" onchange="resultado();">
